--- a/Netflix clone/index.html
+++ b/Netflix clone/index.html
@@ -15,7 +15,7 @@
          </nav>
 
          <div class="content">
-            <h1>Unlimited movies, TV shows and more</h1>
+            <h1>Unlimited movies, editedddd</h1>
             <h3>Watch anywhere. Cancel anytime.</h3>
             <h4>Ready to watch? Enter your email to create or restart your membership.</h4>
             <div class="search">
@@ -42,7 +42,7 @@
             <img src="img/mobile-0819.jpg" alt="">
         </div>
         <div class="text">
-            <h1>Download your shows to watch offline</h1>
+            <h1>Download your shows to watch offline editeddddddd</h1>
             <h3>Save your favourites easily and always have something to watch.</h3>
         </div>
     </div>
